fixed a few layout issues; started flushing out sources note, about, etc.

--- a/scss/components/legends.scss
+++ b/scss/components/legends.scss
@@ -11,7 +11,7 @@
 
   h3 {
     text-align: center;
-    font-size: 1.5em;
+    font-size: 18px;
     font-family: 'Roboto Condensed', sans-serif;
   }
 
