--- a/scss/components/national/mapFieldComponent.scss
+++ b/scss/components/national/mapFieldComponent.scss
@@ -10,7 +10,6 @@
       fill: white;
       stroke: #aaa;
       fillOpacity: 1;
-      filter: url(#glow)
     }
   }
 }
